# a-tutorial-on-the-free-energy-framework

./: README.md  pyproject.toml
notes/: 1_ベイズ推論.ipynb  1_正確な解決策.ipynb  2_自由エネルギーを利用した近似.ipynb  3_ 神経とのアナロジー.ipynb  4_学習モデルのパラメータおよび関係の学習.ipynb  5_自由エネルギーを利用する理論的な説明.ipynb  6_感覚入力の次元を増やす.ipynb
notes/chapter2/: exercise2.ipynb  exercise3.ipynb
notes/chapter5/: excercise5.ipynb
