[tool.poetry]
name = "notes"
version = "0.1.0"
description = ""
authors = ["yoshino"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
jupyterlab = "^4.0.12"
numpy = "^1.26.3"
scipy = "^1.12.0"
matplotlib = "^3.8.2"
pymc = "^5.10.3"
arviz = "^0.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
